--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1314,7 +1314,7 @@ textarea.form-input::-webkit-resizer { display: none; }
  * responsive larger than 450px screen
  */
 
-@media (min-width: 350px) {
+@media (min-width: 400px) {
 
   /**
    * client
@@ -1400,12 +1400,98 @@ textarea.form-input::-webkit-resizer { display: none; }
     max-width: calc(100% - 64px);
     width: calc(100% - 64px);
   }
+}
+
+
+@media (min-width: 350px) {
+
+  /**
+   * client
+   */
+
+  .clients-item { min-width: calc(33.33% - 10px); }
+
+
+  :root {
+
+    /**
+     * typography
+     */
+
+    --fs-1: 30px;
+    --fs-2: 24px;
+    --fs-3: 23px;
+    --fs-4: 18px;
+    --fs-6: 15px;
+    --fs-7: 15px;
+    --fs-8: 12px;
+
+  }
+
+  /**
+   * #PORTFOLIO, BLOG 
+   */
+
+  .project-img,
+  .blog-banner-box { height: auto; }
+
+   /**
+   * #REUSED STYLE
+   */
+   
+   .sidebar, article {
+    width: 330px;
+    margin-inline: auto;
+    padding: 25px;
+  }
+
+  
+  
+  .sidebar {
+    max-height: 200px;
+    margin-bottom: 30px;
+  }
+
+  .sidebar.active { max-height: 584px; }
+
+  .sidebar-info { gap: 30px; }
+
+  .avatar-box { border-radius: 10px; }
+
+  .avatar-box img { width: 100px; }
+
+  .info-content .name { margin-bottom: 15px; }
+
+  .info-content .title { padding: 10px 11px; }
+
+  .info_more-btn {
+    top: -30px;
+    right: -30px;
+    padding: 10px 15px;
+  }
+
+  .info_more-btn span {
+    display: block;
+    font-size: var(--fs-8);
+  }
+
+  .info_more-btn ion-icon { display: none; }
+
+  .separator { margin: 25px 0; }
+
+  .contacts-list { gap: 10px; }
+
+  .contact-info {
+    max-width: calc(100% - 64px);
+    width: calc(100% - 64px);
+  }
 
 
 
 
 
 }
+
 
 
 /**
